<resources>
    <string name="app_name">Marvel Heroes</string>
    <!--All about Top Bar-->
    <string name="page_title">Characters</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="sign_out"><u>Sign out</u></string>
    <string name="sign_out_dialog">Sign out</string>
    <string name="are_you_sure">Are you sure you would like to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="email">ann.kentistou@gmail.com</string>
    <string name="phone">(+30) 6977523576</string>
    <string name="myName">Anna Kentistou</string>
    <!--All about Login and Register-->
    <string name="new_user_register_now">New User? Register now!</string>
    <string name="already_registered"> Already have an account? <u>Sign in!</u> </string>
    <string name="Full_Name">Full Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="reset_pass">Reset your Password</string>
    <string name="set_new_pass">SET A NEW PASSWORD</string>
    <string name="new_Password">New Password</string>
    <!--All about Bottom Navigation menu-->
    <string name="Home">Home Page</string>
    <string name="Search">Search</string>
    <string name="Favorites">Favorites</string>
    <string name="Notifications">Notifications</string>
    <!--All about Tabs-->
    <string name="All_Heroes">Characters</string>
    <string name="Comics">Comics</string>
    <string name="Series">Series</string>
    <string name="Hero_Name"> <u>Hero Name</u> </string>
    <string name="title">Title</string>

    <string name="open" />
    <string name="close" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="showNotifications">Show Notifications</string>

    <string name="menu_home">Home</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="createdBy">Created By Anna Kentistou</string>
    <string name="other_users">Other Users</string>
    <string name="gallery">Gallery</string>
    <string name="contactMe">Find me on GitHub</string>
    <string name="contactMe2">Find me on LinkedIn</string>

    <string name="noInternet">No Internet connection found.\nCheck your connection and try again.</string>
    <!--KeyHash-->
    <string name="app_id">563705977662214</string>
    <string name="facebook_login_protocol">fb563705977662214</string>
</resources>
