<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- <group android:checkableBehavior="single">-->

    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/gallery" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_grey_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/communication"
        android:icon="@drawable/ic_mail_outline_grey_24dp"
        android:title="Communication" />

    <item
        android:id="@+id/about"
        android:title="@string/about" />

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/sign_in"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>
