<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
 <!--   android:layout_marginTop="80dp"-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray_800"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:tabTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/RED_A700"
        >
        <!--app:tabTextColor="@color/gray_100"-->
        <!--app:tabIconTint="@color/gray_100"-->
        <!--app:tabBackground="@color/gray_800"-->
        <!--app:itemIconTint="@color/tab_item_foreground"-->

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All_Heroes"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_comics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comics" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Series" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>