<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<!--
    app:titleTextColor="@color/text_color_in_buttons"
-->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray_800"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:navigationIcon="@drawable/ic_menu_white_24dp"
        app:menu="@menu/top_app_bar"
        app:title="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <!---->"

   <!-- <include
        android:id="@+id/tabs"
        layout="@layout/tab_layout_menu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"/>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray_800"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:tabIndicatorColor="@color/RED_A700"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All_Heroes">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_comics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comics" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Series" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs">
    </androidx.viewpager.widget.ViewPager>

   <!-- <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/gray_800"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        android:background="@color/gray_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
