<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

           <TextView
                android:id="@+id/sout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
               android:layout_marginTop="8dp"
                android:text="@string/sign_out_dialog"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/sure"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/are_you_sure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sout"/>

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cancel"
                android:background="@color/light_gray"
                android:textColor="@color/com_facebook_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sure"/>

            <Button
                android:id="@+id/sign_out_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_dialog"
                android:layout_marginStart="10dp"
                android:textColor="@color/DarkRed"
                android:background="@color/light_gray"
                app:layout_constraintStart_toEndOf="@+id/cancel_btn"
                app:layout_constraintTop_toTopOf="@+id/cancel_btn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>