<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainMenuActivity"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view_for_all"
        android:layout_marginTop="@dimen/margins_in_listview"
        android:layout_marginLeft="@dimen/margins_in_listview"
        android:layout_marginRight="@dimen/margins_in_listview"
        android:dividerHeight="@dimen/TextButtonMargin"
        android:orientation="vertical"
        android:divider="@color/gray_400"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        >

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:itemIconTint="@color/tab_item_foreground"
        app:tabBackground="@color/gray_800"
        app:tabIconTint="@color/gray_100"
        app:tabIndicatorColor="@color/RED_A700"
        app:tabTextColor="@color/gray_100"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All_Heroes" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_comics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comics" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Series" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemBackground="@color/gray_800"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/bottom_navigation_menu"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--Background for Navigation Bar-->
    <!--android:background="?android:attr/windowBackground"-->