<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_background"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".Activities.ConfirmPassActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_new_pass"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="@dimen/TextFieldWidth"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            android:radius="8dp"
            android:shape="rectangle"
            android:textColorHint="#C7C2C2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="@dimen/TextFieldWidth"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            android:layout_width="@dimen/TextFieldWidth"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/new_Password"
            android:inputType="textPersonName"
            android:radius="8dp"
            android:shape="rectangle"
            android:textColorHint="#C7C2C2"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="InvalidId,MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="@dimen/TextFieldWidth"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_pass"
            android:layout_width="@dimen/TextFieldWidth"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword"
            android:radius="8dp"
            android:textColorHint="#C7C2C2"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="@dimen/TextFieldWidth"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="@dimen/TextFieldWidth"
            android:layout_height="@dimen/buttonHeight"
            android:background="#84A17878"
            android:gravity="center"
            android:text="@string/reset_pass"
            android:textAllCaps="false"
            android:textColor="@color/text_color_in_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_pass"
            app:layout_constraintVertical_bias="0.100"
            tools:ignore="HardcodedText,MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/TextButtonSize"
        android:layout_marginTop="@dimen/TextButtonMargin"
        android:foregroundTint="@color/gray_400"
        android:text="Back to Login!"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/TextButtonDimen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
