<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/cancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="20dp"
                android:background="@drawable/ic_cancel_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/personIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/ic_person_blue_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/myName"
            app:layout_constraintStart_toEndOf="@+id/personIcon"
            app:layout_constraintTop_toTopOf="@id/personIcon" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_email_blue_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personIcon" />

        <TextView
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            app:layout_constraintStart_toEndOf="@+id/email_icon"
            app:layout_constraintTop_toTopOf="@id/email_icon" />

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_phone_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_icon" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/phone"
            app:layout_constraintStart_toEndOf="@+id/phone_icon"
            app:layout_constraintTop_toTopOf="@id/phone_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>